--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "zod": "^3.22.4"
@@ -43,6 +45,8 @@
     "@types/mime": "^4.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth2": "^0.1.8",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
