Adding Login via Github

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
@@ -46,6 +47,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
     "@types/passport": "^1.0.16",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
