--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
@@ -45,6 +46,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mime": "^4.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.30",
     "@types/passport": "^1.0.16",
     "@types/passport-github2": "^1.2.9",
