--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,11 @@
 APPLICATION_ENVIRONMENT = development
 PORT = 8000
 DATABASE_URL = postgres://postgres:s3cret123@localhost:5432/voosh-backend-db
+NODE_TLS_REJECT_UNAUTHORIZED = 0
+REFRESH_TOKEN_SECRET = 
+ACCESS_TOKEN_SECRET = 
+RESET_TOKEN_SECRET = 
+GOOGLE_CLIENT_ID = 
+GOOGLE_CLIENT_SECRET = 
+GITHUB_CLIENT_ID = 
+GITHUB_CLIENT_SECRET = 
