Initial Swagger Setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
   },
   "include": [
     "./*.js",
-    "src/**/*.ts",
+    "src/**/*.ts", "src/swagger.ts",
   ],
   "exclude": [
     "test/*.ts",
