--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -52,6 +54,8 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "drizzle-kit": "^0.20.14",
